--- a/css/general.css
+++ b/css/general.css
@@ -290,29 +290,29 @@ p, div {
   border-top: 5px solid rgba(255, 255, 255, 0.479);
 }
 .skill-demo-1-container {
-  background-image: url('/images/web-dev-bg.jpg');
+  background-image: url('images/web-dev-bg.jpg');
 }
 
 .skill-demo-2-container {
-  background-image: url('/images/photo-edit-bg.jpg');
+  background-image: url('images/photo-edit-bg.jpg');
 }
 .skill-demo-3-container{
-  background-image: url('/images/video-edit-bg.jpg');
+  background-image: url('images/video-edit-bg.jpg');
 }
 .skill-demo-4-container{
-  background-image: url('/images/copywriting-bg.jpg');
+  background-image: url('images/copywriting-bg.jpg');
 }
 .skill-demo-5-container{
-  background-image: url('/images/lead-gen-bg.jpg');
+  background-image: url('images/lead-gen-bg.jpg');
 }
 .skill-demo-6-container{
-  background-image: url('/images/bookkeeping-bg.jpg');
+  background-image: url('images/bookkeeping-bg.jpg');
 }
 .skill-demo-7-container{
-  background-image: url('/images/seo-bg.jpg');
+  background-image: url('images/seo-bg.jpg');
 }
 .skill-demo-8-container{
-  background-image: url('/images/fba-amazon-bg.jpg');
+  background-image: url('images/fba-amazon-bg.jpg');
 }
 
 .skill-demo-1-container::before,
