--- a/css/general.css
+++ b/css/general.css
@@ -284,35 +284,26 @@ p, div {
   width: 100vw;
   height: 100vh;
   display: flex;  
-  background-size: cover;
   margin-bottom: 15px;
   border-bottom: 5px solid rgba(255, 255, 255, 0.479);
   border-top: 5px solid rgba(255, 255, 255, 0.479);
 }
-.skill-demo-1-container {
-  background-image: url('images/web-dev-bg.jpg');
-}
-
-.skill-demo-2-container {
-  background-image: url('images/photo-edit-bg.jpg');
-}
-.skill-demo-3-container{
-  background-image: url('images/video-edit-bg.jpg');
-}
-.skill-demo-4-container{
-  background-image: url('images/copywriting-bg.jpg');
-}
-.skill-demo-5-container{
-  background-image: url('images/lead-gen-bg.jpg');
-}
-.skill-demo-6-container{
-  background-image: url('images/bookkeeping-bg.jpg');
-}
-.skill-demo-7-container{
-  background-image: url('images/seo-bg.jpg');
-}
-.skill-demo-8-container{
-  background-image: url('images/fba-amazon-bg.jpg');
+.skill-demo-1-container img,
+.skill-demo-2-container img,
+.skill-demo-3-container img,
+.skill-demo-4-container img,
+.skill-demo-5-container img,
+.skill-demo-6-container img,
+.skill-demo-7-container img,
+.skill-demo-8-container img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(5px);
+  -webkit-filter: blur(3px);
 }
 
 .skill-demo-1-container::before,
