--- a/css/general.css
+++ b/css/general.css
@@ -421,7 +421,15 @@ p, div {
 
 .container-top {
   flex: 1;
-  padding-bottom: 40px;
+}
+
+.text{
+  width: 850px;
+  margin:  0px auto;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .contact-label {
@@ -430,8 +438,7 @@ p, div {
   font-size: 80px;
   font-weight: bold;
   letter-spacing: 20px;
-  padding-top: 40px;
-  padding-bottom: 20px;
+  width: inherit;
 }
 
 .contact-message {
@@ -440,8 +447,7 @@ p, div {
   font-size: 28px;
   letter-spacing: 3px;
   line-height: 40px;
-  padding-left: 500px;
-  padding-right: 500px;
+  width: inherit;
 }
 
 .contact-container div {
@@ -521,6 +527,8 @@ p, div {
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
+  height: auto;
+  min-height: 100px;
 }
 
 .stalk-container {
