--- a/css/general.css
+++ b/css/general.css
@@ -537,6 +537,7 @@ p, div {
   flex-direction: column;
   width: 100%;
   height: 100vh;
+  margin-top:10%
 }
 
 .reference-container,
@@ -545,10 +546,51 @@ p, div {
 }
 
 .reference-container{
+  display: flex;
+  flex-direction: column;
   flex: 1;
   background-color: whitesmoke;
 }
+.div-holder {
+  margin: auto;
+  width: 800px;
+  border-style: solid;
+}
+.ref{
+  color: black;
+  text-align: center;
+  font-size: 50px;
+}
+.reference-holder {
+  flex: .75;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: auto;
+}
 
+.reference-holder div {
+  text-align: center;
+}
+
+.ref-name,
+.ref-position,
+.ref-company{
+  color: black;
+  font-family: Roboto,Arial;
+  font-size: 20px;
+}
+
+.ref-name {
+  font-weight: bolder;
+  font-size: 25px;
+}
+
+.ref-position{
+  font-style: italic;
+}
 .stalker-mode-container{
   flex: 1.5;
   background-color: black;
