--- a/css/general.css
+++ b/css/general.css
@@ -288,6 +288,9 @@ p, div {
   border-bottom: 5px solid rgba(255, 255, 255, 0.479);
   border-top: 5px solid rgba(255, 255, 255, 0.479);
 }
+/* .skill-demo-1-container {
+  background-image: url('/images/web-dev-bg.jpg');
+} */
 .skill-demo-1-container img,
 .skill-demo-2-container img,
 .skill-demo-3-container img,
@@ -305,6 +308,27 @@ p, div {
   filter: blur(5px);
   -webkit-filter: blur(3px);
 }
+/* .skill-demo-2-container {
+  background-image: url('/images/photo-edit-bg.jpg');
+}
+.skill-demo-3-container{
+  background-image: url('/images/video-edit-bg.jpg');
+}
+.skill-demo-4-container{
+  background-image: url('/images/copywriting-bg.jpg');
+}
+.skill-demo-5-container{
+  background-image: url('/images/lead-gen-bg.jpg');
+}
+.skill-demo-6-container{
+  background-image: url('/images/bookkeeping-bg.jpg');
+}
+.skill-demo-7-container{
+  background-image: url('/images/seo-bg.jpg');
+}
+.skill-demo-8-container{
+  background-image: url('/images/fba-amazon-bg.jpg');
+} */
 
 .skill-demo-1-container::before,
 .skill-demo-2-container::before,
@@ -417,6 +441,7 @@ p, div {
   background-position: absolute;
   display: flex;
   flex-direction: column;
+  /* margin-bottom: 10%; */
 }
 
 .container-top {
@@ -431,7 +456,6 @@ p, div {
   display: flex;
   flex-direction: column;
 }
-
 .contact-label {
   text-align: center;
   font-family: Roboto, Arial;
@@ -439,6 +463,7 @@ p, div {
   font-weight: bold;
   letter-spacing: 20px;
   width: inherit;
+
 }
 
 .contact-message {
@@ -455,17 +480,18 @@ p, div {
 }
 
 .contact-info{
+  flex:1 ;
   display: flex;
-  margin-left: 350px;
-  margin-right: 350px;
-  margin-bottom: 80px;
+  margin: auto;
+  margin-bottom: auto;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
 }
 
 .home, .phone, .mail {
   flex: 1;
-  height: 100%;
+  width: 330px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -484,6 +510,7 @@ p, div {
   margin-right: auto;
   margin-top: 100px;
   cursor: pointer;
+
 }
 
 .phone-icon {
@@ -529,6 +556,7 @@ p, div {
   padding-right: 20px;
   height: auto;
   min-height: 100px;
+  
 }
 
 .stalk-container {
@@ -537,20 +565,19 @@ p, div {
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  margin-top:10%
+  margin-top: 10%;
 }
-
-.reference-container,
-.stalker-mode-container {
-  height: 100%;
-}
-
 .reference-container{
   display: flex;
   flex-direction: column;
   flex: 1;
   background-color: whitesmoke;
 }
+.reference-container,
+.stalker-mode-container {
+  height: 100%; 
+}
+
 .div-holder {
   margin: auto;
   width: 800px;
@@ -573,6 +600,7 @@ p, div {
 
 .reference-holder div {
   text-align: center;
+
 }
 
 .ref-name,
@@ -591,6 +619,7 @@ p, div {
 .ref-position{
   font-style: italic;
 }
+
 .stalker-mode-container{
   flex: 1.5;
   background-color: black;
@@ -616,7 +645,7 @@ p, div {
    height: 35vh;
  }
 
-.social-media-holder{
+ .social-media-holder{
   margin: auto;
   width: 800px;
   min-width: 500px;
@@ -624,17 +653,19 @@ p, div {
   justify-content: space-between;
   align-items: center;
 }
-
  .social-media-holder div {
    background-color: orangered;
    width: 100px;
+   height: 100px;
    border-style: solid;
    cursor: pointer;
  }
+ 
 
  .social-media-holder img {
   width:50px;
   padding-top: 25%;
+  
 }
 
 .social-media-holder div:hover {
